pilcrow/web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pilcrow-web
  namespace: pilcrow
  labels:
    tier: backend
    layer: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      layer: webserver
  template:
    metadata:
      labels:
        tier: backend
        layer: webserver
    spec:
      containers:
        - name: webserver
          image: ghcr.io/wreality/pilcrow/web:8750aa36
          ports:
            - containerPort: 80
