pilcrow/web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pilcrow-web
  namespace: pilcrow
spec:
  selector:
    tier: backend
    layer: webserver
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
