pilcrow/web/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pilcrow-web
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pilcrow-web
                port:
                  number: 8888
